added utitility functions

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             <main class="content-main" id="content-main">
                 <figure class="static-img" id="static-img">
                     <figcaption id="heading-main">Walnut Street Bridge, Chattanooga, TN</figcaption>
-                    <img id="image-default" alt="" src="https://maps.googleapis.com/maps/api/staticmap?scale=2&maptype=hybrid&amp;format=png&amp;markers=color:blue|35.0566504,-85.3097487&amp;center=35.0566504,-85.3097487&amp;zoom=18&amp;size=640x400&amp;key=AIzaSyBJgJ23ZGw9AajjwzuHLolsplfTByUmU0A">
+                    <img id="image-default" alt="" src="https://maps.googleapis.com/maps/api/staticmap?scale=2&amp;maptype=hybrid&amp;format=png&amp;markers=color:blue|35.0566504,-85.3097487&amp;center=35.0566504,-85.3097487&amp;zoom=18&amp;size=640x400&amp;key=AIzaSyBJgJ23ZGw9AajjwzuHLolsplfTByUmU0A">
                 </figure>
             </main>
             <aside id="sidebar"></aside>
