added success and error args to geolocation

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     <body role="document">
         <div class="wrapper" id="wrapper"><!-- if sidebar is loaded in, add class 'has-sidebar' -->
             <main class="content-main" id="content-main">
-                <figure class="static-img" id="static-img">
+                <figure class="static-img-container">
                     <figcaption id="heading-main">Walnut Street Bridge, Chattanooga, TN</figcaption>
-                    <img id="image-default" alt="" src="https://maps.googleapis.com/maps/api/staticmap?scale=2&amp;maptype=hybrid&amp;format=png&amp;markers=color:blue|35.0566504,-85.3097487&amp;center=35.0566504,-85.3097487&amp;zoom=18&amp;size=640x400&amp;key=AIzaSyBJgJ23ZGw9AajjwzuHLolsplfTByUmU0A">
+                    <img class="static-img" id="static-img" alt="" src="https://maps.googleapis.com/maps/api/staticmap?scale=1&amp;maptype=hybrid&amp;format=png&amp;markers=color:blue|35.0566504,-85.3097487&amp;center=35.0566504,-85.3097487&amp;zoom=18&amp;size=640x400&amp;key=AIzaSyBJgJ23ZGw9AajjwzuHLolsplfTByUmU0A">
                 </figure>
             </main>
             <aside id="sidebar"></aside>
