Added conditional map

--- a/src/frags/sidebar.html
+++ b/src/frags/sidebar.html
@@ -1,2 +1,2 @@
-<h2>Conditionaly Loaded Sidebar</h2>
-<p>This sidebar only gets loaded in when we are in widescreen mode. This sidebar node does not even exist when the page loads in handheld or tablet states.</p>
+<h2>Conditionally Loaded Sidebar</h2>
+<p>This sidebar node is only created when <code>viewport.getType() === 'tablet'</code></p>
