--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,15 @@
         <link href="demo/demo.css" rel="stylesheet">
     </head>
     <body role="document">
-        <div class="wrapper" id="wrapper"><!-- if sidebar is loaded in, add class 'has-sidebar' -->
+        <div class="wrapper" id="wrapper">
             <main class="content-main" id="content-main">
-                <figure class="static-img-container">
-                    <figcaption id="heading-main">Walnut Street Bridge, Chattanooga, TN</figcaption>
-                    <img class="static-img" id="static-img" alt="" src="https://maps.googleapis.com/maps/api/staticmap?scale=1&amp;maptype=hybrid&amp;format=png&amp;markers=color:blue|35.0566504,-85.3097487&amp;center=35.0566504,-85.3097487&amp;zoom=18&amp;size=640x400&amp;key=AIzaSyBJgJ23ZGw9AajjwzuHLolsplfTByUmU0A">
-                </figure>
+                <h1 id="heading-main" class="heading-main">Walnut Street Bridge, Chattanooga, TN</h1>
             </main>
-
-            <span class="message" id="viewport-type"></span>
         </div>
-        <script async defer src="//maps.googleapis.com/maps/api/js?key=AIzaSyBJgJ23ZGw9AajjwzuHLolsplfTByUmU0A&amp;callback=initMap"></script>
+        <div class="map" id="map"></div>
+        <div id="map-bg" class="map-bg"></div>
+        <span class="message" id="viewport-type"></span>
+        <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBJgJ23ZGw9AajjwzuHLolsplfTByUmU0A"></script>
         <script src="demo/demo.js"></script>
     </body>
 </html>
